--- a/app/src/main/res/layout/adapter_example_header.xml
+++ b/app/src/main/res/layout/adapter_example_header.xml
@@ -12,4 +12,18 @@
         android:textSize="24sp"
         android:textColor="@android:color/black"
         android:layout_margin="8dp"/>
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button 1"
+        android:layout_marginRight="8dp"/>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button 2"
+        android:layout_marginRight="8dp"/>
 </LinearLayout>
